The formatting is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/)

## [unreleased] <!-- Spell Check -->

### Added

- Dungeon now prints in ncurses with message and status lines above and
  below the dungeon space, respectively
- --help/-h switch has been added to display the available switches and
  their descriptions
- PC can now be controlled with movement keys
- typing Q will now quit the game with a goodbye message

## [4.0.0] - 2025-3-5

### Added

- The PC now aimlessly wanders the dungeon in search of an exit to the
  neverending nightmare he cannot escape from
- The dungeon now spawns monsters, between 7 and 20 by default 
  unless specified by the --nummon switch, in a random location inside a 
  room that the player is not in, excluding stairs
- Monsters roam the dungeon based on their randomly generated personality
- When a character walks where another character is, the character that
  was already there now dies and prints that they have died and ends the
  game if it was the player
- Switch --montype which takes a char and will make a dungeon with only
  one monster in it, which is that type
- Exhaustive error checking and memory freeing, so now all heap blocks
  are completely freed

### Changed

- Better error checking for switches and load/save functions
- Printing the dungeon now displays the monster's location,
  marked by its hex code equivalent of the binary value of its
  attributes

## [3.1.0] - 2025-2-26

### Added

- Separate header files for each C file, excluding main, in a complete
  refactor of the header file setup, in order to manage dependencies

### Changed

- Updated .gitignore
- Updated Makefile

## [3.0.2] - 2025-2-24

### Removed

- README section from assignment 2

## [3.0.1] - 2025-2-24

### Changed

- README is now properly updated to match specifications for assignment 3

## [3.0.0] - 2025-2-24

### Added

- Distances for tunneling and non tunneling monsters are now calculated