@@ -12,7 +12,12 @@ The formatting is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.
 - --help/-h switch has been added to display the available switches and
   their descriptions
 - PC can now be controlled with movement keys
-- typing Q will now quit the game with a goodbye message
+- Pressing Q will now quit the game with a goodbye message
+- Pressing m will now show a list of living monsters
+
+### Changed
+
+- Optimizations for performance and error handling
 
 ## [4.0.0] - 2025-3-5
 
